--- a/Project/eAuctionServices/SellerProcessingService/SellerProcessingService.csproj
+++ b/Project/eAuctionServices/SellerProcessingService/SellerProcessingService.csproj
@@ -6,6 +6,8 @@
 
   <ItemGroup>
     <PackageReference Include="Confluent.Kafka" Version="1.8.2" />
+    <PackageReference Include="Serilog" Version="2.11.0" />
+    <PackageReference Include="Serilog.Sinks.Http" Version="8.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
