--- a/Project/eAuctionServices/SellerProcessingService/appsettings.json
+++ b/Project/eAuctionServices/SellerProcessingService/appsettings.json
@@ -1,6 +1,6 @@
 {
   "eAuctionDatabase": {
-    "ConnectionString": "mongodb://localhost:27017",
+    "ConnectionString": "mongodb://172.31.94.198:27017",
     "DatabaseName": "eAuction"
   },
   "Logging": {
